fixed gap between nav and jumbotron on lp

--- a/main.css
+++ b/main.css
@@ -10,7 +10,7 @@
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  margin-top: -10px;
+  margin-top: -20px;
 }
 
 
